# sequencer

./: CMakeLists.txt  build.sh  build_instruction.txt
.github/workflows/: cmake.yml
plugin/: CMakeLists.txt
plugin/include/E3Seq/: ControlChangeEvents.h  E3Sequencer.h  KeyboardMonitor.h  MonoTrack.h  NoteEvent.h  NoteEvents.h  PluginEditor.h  PluginProcessor.h  PolyTrack.h  SequencerComponent.h  Step.h  Track.h  TrackComponent.h  Utility.h.in
plugin/source/: E3Sequencer.cpp  PluginEditor.cpp  PluginProcessor.cpp  Track.cpp
test/source/: AudioProcessorTest.cpp
